--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,10 +10,13 @@ on:
       build_version:
         description: 'Build Version Number'
         default: 'latest'
+      environment:
+        default: 'prod'
 
 
 jobs:
   docker_build:
+    environment: ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -29,15 +32,6 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.TAILSCALE_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-      - name: copy file via ssh password
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.TAILSCALE_SSH_SERVER }}
-          username: ${{ secrets.TAILSCALE_SSH_USER }}
-          key: ${{ secrets.TAILSCALE_SSH_KEY }}
-          port: ${{ secrets.TAILSCALE_SSH_SERVER_PORT }}
-          source: "*"
-          target: "/tmp/tailscale"
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -45,4 +39,4 @@ jobs:
           username:  ${{ secrets.TAILSCALE_SSH_USER }}
           key: ${{ secrets.TAILSCALE_SSH_KEY }}
           port: ${{ secrets.TAILSCALE_SSH_SERVER_PORT }}
-          script: cd /tmp/tailscale && ls -l
+          script: mkdir /tmp/${{ vars.SERVICE }}
