--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,7 +16,6 @@ on:
 
 jobs:
   docker_build:
-    environment: ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -39,4 +38,4 @@ jobs:
           username:  ${{ secrets.TAILSCALE_SSH_USER }}
           key: ${{ secrets.TAILSCALE_SSH_KEY }}
           port: ${{ secrets.TAILSCALE_SSH_SERVER_PORT }}
-          script: mkdir /tmp/${{ vars.GLOBAL_TEST }}
+          script: mkdir /tmp/pknw1/${{ vars.GLOBAL_TEST }}
