--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -41,7 +41,7 @@ jobs:
           port: ${{ secrets.TAILSCALE_SSH_SERVER_PORT }}
           script: mkdir /tmp/pknw1/notset
       - name: executing remote ssh commands using password
-        if: ${{ vars.GLOBAL_TEST2 === '' }}
+        if: ${{ vars.GLOBAL_TEST2 == '' }}
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.TAILSCALE_SSH_SERVER }}
