--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,33 +20,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          SUMMARY_HEADER=$(cat << EOF
-
-
-          ███╗   ██╗ ██████╗ ██╗███╗   ██╗██╗  ██╗     ██████╗ ██████╗  ██████╗ ██╗  ██╗██╗   ██╗      
-          ████╗  ██║██╔════╝ ██║████╗  ██║╚██╗██╔╝     ██╔══██╗██╔══██╗██╔═══██╗╚██╗██╔╝╚██╗ ██╔╝      
-          ██╔██╗ ██║██║  ███╗██║██╔██╗ ██║ ╚███╔╝█████╗██████╔╝██████╔╝██║   ██║ ╚███╔╝  ╚████╔╝       
-          ██║╚██╗██║██║   ██║██║██║╚██╗██║ ██╔██╗╚════╝██╔═══╝ ██╔══██╗██║   ██║ ██╔██╗   ╚██╔╝        
-          ██║ ╚████║╚██████╔╝██║██║ ╚████║██╔╝ ██╗     ██║     ██║  ██║╚██████╔╝██╔╝ ██╗   ██║         
-          ╚═╝  ╚═══╝ ╚═════╝ ╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝     ╚═╝     ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝   ╚═╝         
-                                                                                                       
-          ██╗     ███████╗████████╗███████╗███████╗███╗   ██╗ ██████╗██████╗ ██╗   ██╗██████╗ ████████╗
-          ██║     ██╔════╝╚══██╔══╝██╔════╝██╔════╝████╗  ██║██╔════╝██╔══██╗╚██╗ ██╔╝██╔══██╗╚══██╔══╝
-          ██║     █████╗     ██║   ███████╗█████╗  ██╔██╗ ██║██║     ██████╔╝ ╚████╔╝ ██████╔╝   ██║   
-          ██║     ██╔══╝     ██║   ╚════██║██╔══╝  ██║╚██╗██║██║     ██╔══██╗  ╚██╔╝  ██╔═══╝    ██║   
-          ███████╗███████╗   ██║   ███████║███████╗██║ ╚████║╚██████╗██║  ██║   ██║   ██║        ██║   
-          ╚══════╝╚══════╝   ╚═╝   ╚══════╝╚══════╝╚═╝  ╚═══╝ ╚═════╝╚═╝  ╚═╝   ╚═╝   ╚═╝        ╚═╝   
-                                                                                                       
-           ██████╗ █████╗ ██████╗ ██████╗ ██╗   ██╗    ██╗    ██╗██╗    ██╗██╗    ██╗                  
-          ██╔════╝██╔══██╗██╔══██╗██╔══██╗╚██╗ ██╔╝    ██║    ██║██║    ██║██║    ██║                  
-          ██║     ███████║██║  ██║██║  ██║ ╚████╔╝     ██║ █╗ ██║██║ █╗ ██║██║ █╗ ██║                  
-          ██║     ██╔══██║██║  ██║██║  ██║  ╚██╔╝      ██║███╗██║██║███╗██║██║███╗██║                  
-          ╚██████╗██║  ██║██████╔╝██████╔╝   ██║       ╚███╔███╔╝╚███╔███╔╝╚███╔███╔╝                  
-           ╚═════╝╚═╝  ╚═╝╚═════╝ ╚═════╝    ╚═╝        ╚══╝╚══╝  ╚══╝╚══╝  ╚══╝╚══╝                   
-                                                                                                       
-
-
-          EOF
-          )
+          SUMMARY_HEADER=$(figlet ${{ inputs.build_version }})
           echo "::set-output name=content::$SUMMARY_HEADER"
           echo "$SUMMARY_HEADER" >> $GITHUB_STEP_SUMMARY
