--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,6 +24,7 @@ jobs:
           echo "${{ github.fullName }} " >> $GITHUB_STEP_SUMMARY
           TIMESTAMP=$(date +%s)
           echo ${TIMESTAMP} >> $GITHUB_STEP_SUMMARY
+          echo "started at "${TIMESTAMP}  >> $GITHUB_STEP_SUMMARY
           echo " - [X] update docker-compose.yml"  >> $GITHUB_STEP_SUMMARY
           echo " - [X] image  ${{ inputs.build_version }} " >> $GITHUB_STEP_SUMMARY
           echo " - [X] image  ${{ inputs.build_version }} " >> $GITHUB_STEP_SUMMARY
