--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,9 +22,11 @@ jobs:
       - run: |
           echo "![](https://www.pknw1.co.uk/assets/img/pknw1logo-white.png)"  >> $GITHUB_STEP_SUMMARY
           echo "${{ github.fullName }} " >> $GITHUB_STEP_SUMMARY
-          TIMESTAMP=$(date +%s)
+          TIMESTAMP=$(date)
+          CONMPOSE=$(cat deploy/docker-compose.yml)
           echo ${TIMESTAMP} >> $GITHUB_STEP_SUMMARY
           echo "started at "${TIMESTAMP}  >> $GITHUB_STEP_SUMMARY
           echo " - [X] update docker-compose.yml"  >> $GITHUB_STEP_SUMMARY
           echo " - [X] image  ${{ inputs.build_version }} " >> $GITHUB_STEP_SUMMARY
           echo " - [X] image  ${{ inputs.build_version }} " >> $GITHUB_STEP_SUMMARY
+          echo ${COMPOSE} >> $GITHUB_STEP_SUMMARY
